# mcp-kit-python

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.docs-syncer/: README.md  generator.py  test_uv_setup.py
.github/workflows/: create-release-branch.yml  generate-docs.yml  mypy.yml  release.yml  ruff.yml  run-examples.yml
.github/workflows/instructions/: copilot-instructions.md
docs/examples/: langgraph.md  mcp_client_session.md  openai_agents_sdk.md  proxy_configs.md
docs/reference/: _category_.json
docs_syncer/: generator.py
examples/langgraph/: pyproject.toml
examples/mcp_client_session/: pyproject.toml
examples/openai_agents_sdk/: pyproject.toml
examples/proxy_configs/: main.py  mocked_prompts.yaml  mocked_prompts_and_tools_target.yaml  pyproject.toml
examples/registry/: main.py  pyproject.toml
src/mcp_kit/: factory.py
src/mcp_kit/generators/: llm.py
src/mcp_kit/prompts/: interpolation.py
src/mcp_kit/targets/: __init__.py  mcp.py  mocked.py  registry.py
tests/: test_factory.py  test_interpolation.py  test_prompts_interpolation.py  test_proxy_config.py  test_target_from_config.py  test_targets_mocked.py
