[project]
name = "examples-openai-agents-sdk"
version = "0.0.1"
description = "MCP Kit OpenAI Agents Example"
readme = "README.md"
authors = [
    { name = "Agentiqs", email = "support@agentiqs.ai" }
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "mcp-kit",
    "openai-agents==0.0.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["examples/openai_agents_sdk"]

[tool.hatch.metadata]
allow-direct-references = true
