[project]
name = "examples-mcp-registry"
version = "0.0.1"
description = "MCP Registry Example"
readme = "README.md"
authors = [
    { name = "Agentiqs", email = "support@agentiqs.ai" }
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "mcp-kit>=0.2.0",
    "openai-agents==0.0.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["examples/mcp_registry"]

[tool.hatch.metadata]
allow-direct-references = true
